[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "ccl_simplesnappy"
]

[project]
name = "ccl_simplesnappy"
version = "0.4"
authors = [
  { name="Alex Caithness", email="research@cclsolutionsgroup.com" },
]
description = "A pure Python Snappy decompressor with no dependencies."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
keywords = ["digital forensics", "dfir", "chrome", "chromium", "browser"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/cclgroupltd/ccl_simplesnappy"
Issues = "https://github.com/cclgroupltd/ccl_simplesnappy/issues"